objects/Success_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>"Yes"</defaultValue>
        <label>Active</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSE_Assigned__c</fullName>
        <formula>IF(Customer_BU_Name__c != null, 
IF(ISBLANK(Customer_BU_Name__r.Assigned_CSE__c  ), HYPERLINK( Customer_BU_Name__r.Assigned_SPM__c, Customer_BU_Name__r.Assigned_SPM__r.FirstName &amp; " " &amp; Customer_BU_Name__r.Assigned_SPM__r.LastName), HYPERLINK( Customer_BU_Name__r.Assigned_CSE__c, Customer_BU_Name__r.Assigned_CSE__r.FirstName  &amp; " " &amp; Customer_BU_Name__r.Assigned_CSE__r.LastName)), 
IF(Customer_Name__c != null,  
IF(ISBLANK(Customer_Name__r.Assigned_CSE__c  ), HYPERLINK( Customer_Name__r.Assigned_SPM__c, Customer_Name__r.Assigned_SPM__r.FirstName &amp; " " &amp; Customer_Name__r.Assigned_SPM__r.LastName), HYPERLINK( Customer_Name__r.Assigned_CSE__c, Customer_Name__r.Assigned_CSE__r.FirstName  &amp; " " &amp; Customer_Name__r.Assigned_CSE__r.LastName)),null
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerBU_Name__c</fullName>
        <formula>IF(ISBLANK(Customer_BU_Name__c ), HYPERLINK("/"+ Customer_Name__c, Customer_Name__r.Name, '_self'), HYPERLINK("/"+ Customer_BU_Name__c , Customer_BU_Name__r.Name, '_self'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer/BU Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_BU_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU NAME</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Success Plans</relationshipLabel>
        <relationshipName>Success_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Customer RT(Parent) to Success Plan (Child)</description>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Success Plans</relationshipLabel>
        <relationshipName>Success_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_of_SP__c</fullName>
        <label>Last Modified Date of SP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <formula>IF( Last_Modified_Date_of_SP__c &gt;  LastModifiedDate , Last_Modified_Date_of_SP__c ,LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <description>Used for C360 Customer Success Program</description>
    <label>Success Plan</label>
    <nameField>
        <label>Success Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>